fix select visibility in analysis panel

--- a/frontend/app/assets/css/bootstrap/less/layout.less
+++ b/frontend/app/assets/css/bootstrap/less/layout.less
@@ -6,7 +6,7 @@
     left: 0;
     right:0;
     .transition(all .25s linear);
-    z-index: 2;
+    z-index: 4;
   }
   
   .table-row { 
